--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vi</title>
-  <meta name="Description" content="Home Page of iissnan">
   <meta name="color-scheme" content="dark light">
+  <meta name="description" content="404 Not Found">
+	<meta name="keywords" content="error404,Error404,Error404主页,Allen Wang,blog,博客">
   <script>(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
   <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
 </head>
@@ -27,16 +28,15 @@
       <span class="quote-line quote-line-end animate-slide-in-right"></span>
     </div>
     <div class="links">
-      <a href="https://github.com/iissnan" class="animate-slide-in-down">GitHub</a>
-      <a href="https://notes.iissnan.com" class="animate-slide-in-down">Notes</a>
-      <a href="https://douban.com/people/iissnan" class="animate-slide-in-down">DouBan</a>
-      <a href="https://weibo.com/iissnan" class="animate-slide-in-down">WeiBo</a>
+      <a href="https://github.com/alanwang233233" class="animate-slide-in-down">GitHub</a>
+      <a href="https://blog.alanw.tech" class="animate-slide-in-down">Blog</a>
+      <a href="https://space.bilibili.com/327505525" class="animate-slide-in-down">Bilibili</a>
     </div>
     <div class="location">
       <span class="location-icon animate-slide-in-up">
         <i class="icon icon-map-pin"></i>
       </span>
-      <span class="location-text animate-slide-in-down">XiaMen - China</span>
+      <span class="location-text animate-slide-in-down">Shanghai - China</span>
     </div>
     <div class="relocating">
       Navigating to: <span class="relocate-location"></span>...
